Mon Jul 20 11:13:53 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/NodeManager/Node_Manager_Module.cpp:
          Reverted an unicode change.

Mon Jul 20 10:55:13 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/DomainApplicationManager/Node_Locator.h:
        * DAnCE/DomainApplicationManager/Node_Locator.cpp:
        * DAnCE/ExecutionManager/ExecutionManager_Module.h:
        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp:
        * DAnCE/NodeApplication/Name_Utilities.h:
        * DAnCE/NodeApplication/Name_Utilities.cpp:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * DAnCE/Starter/Starter.h:
        * DAnCE/Starter/Starter.cpp:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Logger/File_Logger_Backend.cpp:
          Reverted some unicode changes.

Mon Jul 20 10:50:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Benchmark/RoundTripClient/RoundTripClient.mpc
        * performance-tests/Protocols/Receiver/Receiver.mpc
        * performance-tests/Protocols/Sender/Sender.mpc
          Also disabled svnt projects with ace_for_tao

Mon Jul 20 10:32:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          Removed old msvc checks

Mon Jul 20 07:02:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/Configurators/Server_Configurator.cpp:
        * ciao/ComponentServer/Configurators/Server_Configurator.h:
          Use bool for rt_support_ and added a default value to the constructor
          to resolve problems with older gcc versions

Sun Jul 19 18:25:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Logger/Logger_Service.cpp:
        * DAnCE/Logger/Logger_Service.h:
          Unicode fixes
